--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
 title: Rhino3D Developer Docs
-email: alain@mcneel.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "/developer-rhino3d-com/" # the subpath of your site, e.g. /blog/
+# email: alain@mcneel.com
+# description: > # this means to ignore newlines until "baseurl:"
+#   Write an awesome description for your new site here. You can edit this
+#   line in _config.yml. It will appear in your document head meta (for
+#   Google search results) and in your feed.xml site description.
+baseurl: "/developer-rhino3d-com" # the subpath of your site, e.g. /blog/
 url: "http://developer.rhino3d.com" # the base hostname & protocol for your site
-twitter_username: ""
+# twitter_username: ""
 github_username:  mcneel
 
 # Build settings
