Remove 3D from the title

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Rhino3D Developer Docs
+title: Rhino Developer Docs
 # email: alain@mcneel.com
 # description: > # this means to ignore newlines until "baseurl:"
 #   Write an awesome description for your new site here. You can edit this
