--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,14 @@ github_username:  mcneel
 # Build settings
 markdown: redcarpet
 
+# If we decide that we want to use kramdown over redcarpet, syntax
+# highlighting is performed by turning on the following options and
+# including/running highlight.js (https://highlightjs.org/) at the
+# top of pages that need it (probably just add to head.html)
+#markdown: kramdown
+#kramdown:
+#  input: GFM
+
 #port: 4444
 
 safe: true
