--- a/_config.yml
+++ b/_config.yml
@@ -11,15 +11,15 @@ url: "http://developer.rhino3d.com" # the base hostname & protocol for your site
 github_username:  mcneel
 
 # Build settings
-markdown: redcarpet
+#markdown: redcarpet
 
 # If we decide that we want to use kramdown over redcarpet, syntax
 # highlighting is performed by turning on the following options and
 # including/running highlight.js (https://highlightjs.org/) at the
 # top of pages that need it (probably just add to head.html)
-#markdown: kramdown
-#kramdown:
-#  input: GFM
+markdown: kramdown
+kramdown:
+  input: GFM
 
 #port: 4444
 
