--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
 language: ruby
 rvm:
   - 2.1
-script: "bundle exec jekyll build --safe"
+sudo: required
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq mono-devel mono-mcs
+script:
+  - "bundle exec jekyll build --safe"
+  - nuget install RhinoCommon -source https://pyget.herokuapp.com/
+  - cp RhinoCommon*/lib/RhinoCommon.dll .
+  - ruby test/compile-sample.rb _samples/rhinocommon/meshvolume.md
 branches:
   only:
     - gh-pages
