--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: Rhino Developer Docs
 #   Write an awesome description for your new site here. You can edit this
 #   line in _config.yml. It will appear in your document head meta (for
 #   Google search results) and in your feed.xml site description.
-baseurl: "/" # the subpath of your site, e.g. /blog/
+baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://developer.rhino3d.com" # the base hostname & protocol for your site
 # twitter_username: ""
 github_username:  mcneel
