--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - curl -s http://download.mono-project.com/repo/xamarin.gpg | sudo apt-key add -
   - echo "deb http://download.mono-project.com/repo/debian wheezy main" | sudo tee /etc/apt/sources.list.d/xamarin.list
   - sudo apt-get update -y
-  - sudo apt-get install -y mono-mcs nuget
+  - sudo apt-get install -y mono-mcs libnuget-core-cil nuget
 script:
   - "bundle exec jekyll build --safe"
   - nuget install RhinoCommon -source https://pyget.herokuapp.com/
