--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
 script:
   - "bundle exec jekyll build --safe"
   - cd _samples
-  - mono nuget.exe install RhinoCommon -source https://pyget.herokuapp.com/
+  - mono ../nuget.exe install RhinoCommon -source https://pyget.herokuapp.com/
   - cp RhinoCommon*/lib/RhinoCommon.dll .
   - ruby ../test/compile-sample.rb rhinocommon/m*.md
 branches:
