--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
   - cd _samples
   - mono ../nuget.exe install RhinoCommon -source https://pyget.herokuapp.com/
   - cp RhinoCommon*/lib/RhinoCommon.dll .
-  - ruby ../test/compile-sample.rb rhinocommon/m*.md
+  - ruby ../test/compile-sample.rb rhinocommon/*.md
 branches:
   only:
     - gh-pages
