add RhinoCommon API docs for Rhino 5 for Windows

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "api/RhinoCommon"]
 	path = api/RhinoCommon
 	url = https://github.com/mcneel/rhinocommon-api-docs.git
+[submodule "api/RhinoCommonWin"]
+	path = api/RhinoCommonWin
+	url = https://github.com/mcneel/rhinocommon-api-docs-win.git
