--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: ruby
 rvm:
-  - 2.1
-script: "bundle exec jekyll build --safe"
-branches:
-  only:
-    - gh-pages
-    - /pages-(.*)/ # test every branch which starts with "pages-"
+- 2.1
+script: script/cibuild
+before_script:
+- openssl aes-256-cbc -K $encrypted_5727dd035aee_key -iv $encrypted_5727dd035aee_iv -in script/.ssh/bozo.enc -out script/.ssh/bozo -d
+- chmod 600 script/.ssh/bozo
+- eval `ssh-agent -s`
+- ssh-add script/.ssh/bozo
