--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Rhino Developer Docs
 #   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://developer.rhino3d.com" # the base hostname & protocol for your site
-editMeOnGhBaseUrl: "mcneel/developer-rhino3d-com"
+nwo: "mcneel/developer-rhino3d-com" # github repository (name with owner)
 # twitter_username: ""
 github_username:  mcneel
 
@@ -27,7 +27,7 @@ kramdown:
   input: GFM
 gems:
   - jekyll-sitemap
-  
+
 #port: 4444
 
 safe: true
@@ -52,4 +52,7 @@ collections:
     output: true
     permalink: /samples/:path/
 
-exclude: [/script]
+exclude: [/script, /test, README.md, CONTRIBUTING.md, Gemfile]
+
+version_branches:
+  - wip
