Update rhinocommon api docs to v6.0.16217.04201
Yeah, I know v6.0.16217.04201 hasn't been publicly released yet but
sandcastle takes a long time and I only just thought of that!

Anyway, this is just a stop-gap until we get this automated via ci.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,4 @@
 [submodule "api/RhinoCommonWin"]
 	path = api/RhinoCommonWin
 	url = https://github.com/mcneel/rhinocommon-api-docs-win.git
+	branch = wip
