--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "api/RhinoCommon"]
 	path = api/RhinoCommon
 	url = https://github.com/mcneel/rhinocommon-api-docs.git
+	branch = wip
 [submodule "api/RhinoCommonWin"]
 	path = api/RhinoCommonWin
 	url = https://github.com/mcneel/rhinocommon-api-docs-win.git
