Add grasshopper 1.0 sdk documentation
Generated from `src4/rhino4/Plug-ins/Grasshopper/docs/en/SDK
Help/GrasshopperSDKHelp.shfbproj`

Attention: new submodule! (api/grasshopper)
(cherry picked from commit b400db292cba5a80fb0317c2622c9fda717647f7)

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "api/RhinoCommonWin"]
 	path = api/RhinoCommonWin
 	url = https://github.com/mcneel/rhinocommon-api-docs.git
+[submodule "api/grasshopper"]
+	path = api/grasshopper
+	url = https://github.com/mcneel/grasshopper-sdk-docs.git
