--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = api/RhinoCommonWin
 	url = https://github.com/mcneel/rhinocommon-api-docs.git
 	branch = wip-win
+[submodule "api/grasshopper"]
+	path = api/grasshopper
+	url = https://github.com/mcneel/grasshopper-sdk-docs.git
