Make stable branch configurable
This will make it easier for Dan to switch over from master to 5
Also fixes the stringify issue directly inside script/cibuild

See WWW-519

(cherry picked from commit df10e374145c87cc987c77fb9554969f8aef535f)

--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,9 @@ collections:
 
 exclude: [/script, /test, README.md, CONTRIBUTING.md, Gemfile]
 
-version_branches:
-  - wip
-  - "5"
+# version branches
+versions:
+  stable: master
+  branches:
+    - wip
+    - "5"
