Rhino 6 is the stable version of the site

--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ exclude: [/script, /test, README.md, CONTRIBUTING.md, Gemfile]
 
 # version branches
 versions:
-  stable: master
+  stable: "6"
   branches:
     - wip
     - "5"
