Map master branch to /wip
See WWW-519

(cherry picked from commit 9e82d1cad0ecaaa1ea5cef17ca66bbce444fd0e6)

--- a/_config.yml
+++ b/_config.yml
@@ -64,6 +64,6 @@ exclude: [/script, /test, README.md, CONTRIBUTING.md, Gemfile]
 versions:
   stable: "6"
   branches:
-    - wip
+    - master # => wip
     - "5"
     - "6"
