Rename nuget guide to match 6 and add redirect
Testing the jekyll-redirect-from plugin...

--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,9 @@ kramdown:
   input: GFM
   syntax_highlighter_opts:
       disable: true
-gems:
+plugins:
   - jekyll-sitemap
+  - jekyll-redirect-from
 
 #port: 4444
 
