--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: ruby
 # see .ruby-version
+cache:
+  bundler: true
+  directories:
+    - /home/travis/.rvm/
 script: script/cibuild
 before_script:
 - openssl aes-256-cbc -K $encrypted_5727dd035aee_key -iv $encrypted_5727dd035aee_iv -in script/.ssh/bozo.enc -out script/.ssh/bozo -d
