Fix travis build when using cache
(cherry picked from commit 64aea780409fe36b64d1b05c8575d91f56010ab8)

--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ collections:
     output: true
     permalink: /videos/
 
-exclude: [/script, /test, README.md, CONTRIBUTING.md, Gemfile]
+exclude: [script, test, README.md, CONTRIBUTING.md, Gemfile, vendor]
 
 # version branches
 versions:
