--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ cache:
   bundler: true
   directories:
     - /home/travis/.rvm/
+git:
+  depth: false # required for jekyll-last-modified-at (WWW-316)
 script: script/cibuild
 before_script:
 - openssl aes-256-cbc -K $encrypted_5727dd035aee_key -iv $encrypted_5727dd035aee_iv -in script/.ssh/bozo.enc -out script/.ssh/bozo -d
