--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,8 @@ nwo: "mcneel/developer-rhino3d-com" # github repository (name with owner)
 # twitter_username: ""
 github_username:  mcneel
 
+repository: croudyj/developer-rhino3d-com
+
 # RhinoScriptSyntax API docs
 rss_show_bad_docstring: true
 rss_show_missing_examples_links: false
