Added Cloud Zoo docs

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,6 +2,11 @@
   display_name: Alain Cormier
   email: alain@mcneel.com
   discourse: Alain
+  
+- name: aj
+  display_name: Andrés Jacobo
+  email: aj@mcneel.com
+  discourse: aj1
 
 - name: andrew_le_bihan
   display_name: Andrew le Bihan
