--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,9 @@ title: Rhino Developer Docs
 #   Write an awesome description for your new site here. You can edit this
 #   line in _config.yml. It will appear in your document head meta (for
 #   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
+
+baseurl: "" # set by the build script
+
 url: "http://developer.rhino3d.com" # the base hostname & protocol for your site
 nwo: "mcneel/developer-rhino3d-com" # github repository (name with owner)
 # twitter_username: ""
@@ -16,6 +18,11 @@ repository: croudyj/developer-rhino3d-com
 # RhinoScriptSyntax API docs
 rss_show_bad_docstring: true
 rss_show_missing_examples_links: false
+
+# site variables
+rhino:
+  windows_path: "C:\\Program Files\\Rhino 7"
+  mac_path: "/Applications/Rhino 7.app"
 
 # Build settings
 #markdown: redcarpet
