--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -33,8 +33,8 @@
   email: dalelear@mcneel.com
   discourse: dalelear
 
-- name: dan_belcher
-  display_name: Dan Belcher
+- name: dan_rigdon_bel
+  display_name: Dan Rigdon-Bel
   email: dan@mcneel.com
   discourse: dan
 
