--- a/.gitmodules
+++ b/.gitmodules
@@ -1,13 +1,16 @@
-[submodule "api/RhinoCommon"]
-	path = api/RhinoCommon
+[submodule "static/api/RhinoCommon"]
+	path = static/api/RhinoCommon
 	url = https://github.com/mcneel/rhinocommon-api-docs.git
-	branch = wip-mac5
-[submodule "api/grasshopper"]
-	path = api/grasshopper
+	shallow = true
+[submodule "static/api/grasshopper"]
+	path = static/api/grasshopper
 	url = https://github.com/mcneel/grasshopper-api-docs.git
-[submodule "api/rhinoscript"]
-	path = api/rhinoscript
+	shallow = true
+[submodule "static/api/rhinoscript"]
+	path = static/api/rhinoscript
 	url = https://github.com/mcneel/rhinoscript-api-docs.git
-[submodule "api/cpp"]
-	path = api/cpp
+	shallow = true
+[submodule "static/api/cpp"]
+	path = static/api/cpp
 	url = https://github.com/mcneel/rhino-cpp-api-docs.git
+	shallow = true
