--- a/config/production/config.toml
+++ b/config/production/config.toml
@@ -2,4 +2,4 @@
 # https://gohugo.io/getting-started/configuration/
 disableLanguages = ["cs", "cn", "de", "es", "fr", "it", "jp", "kr", "pl", "pt", "ru", "tw"]
 
-baseURL = "https://newdev.rhino3d.com/"
+baseURL = "https://developer.rhino3d.com/"
