Disable lowercasing of paths to fix existing urls
Required, for now, to serve /api/RhinoScriptSyntax/ from its original path and fix broken urls.

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -13,6 +13,7 @@ metaDataFormat = "toml"
 disable404 = "true" # we custom generate our 404 page based on a template for localization purposes
 enableGitInfo = "true"
 disableKinds = ["RSS"]
+disablePathToLower = true
 
 [security.funcs]
     getenv = ['^HUGO_', 'MCNEEL_REGION']
