Better instructions for hugo SetMaxFilesLimits

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -71,7 +71,7 @@
             "problemMatcher": []
         },
         {
-            "label": "SetMaxFilesLimits",
+            "label": "hugo SetMaxFilesLimits",
             "type": "shell",
             "command": "sudo",
             "args": [
