Even more detailed instructions for SetMaxFilesLimits

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -71,7 +71,7 @@
             "problemMatcher": []
         },
         {
-            "label": "hugo SetMaxFilesLimits",
+            "label": "hugo SetMaxFilesLimits (run once only)",
             "type": "shell",
             "command": "sudo",
             "args": [
