--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -25,6 +25,7 @@ disablePathToLower = true
   siteRootURL = "/" # used in navigation banner
   rhinoURL = "https://www.rhino3d.com"
   rhinoURLNewSource = "https://www.rhino3d.com/new-source"
+  sitemapBaseURL = "https://developer.rhino3d.com"
   navBarShouldResize = false
   supportsChat = false
   siteNavLogo = "/images/rhinodevlogo.png"
