--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "hugo serve english",
+            "label": "hugo serve",
             "type": "process",
             "command": "./Launch",
             "presentation": {
