--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -33,7 +33,7 @@ disablePathToLower = true
   logoTitleTextSecondary = "Developer"
   protectedMark = ""
   discourseURL = "https://discourse.mcneel.com"
-  forestryBaseURL = "https://app.forestry.io/sites/9bs6ghwu05ji2w/#/pages/content"
+  forestryBaseURL = "https://app.forestry.io/sites/9bs6ghwu05ji2w/#/pages/content" # deprecated; can be removed soon
   facebookURL = "https://www.facebook.com/McNeelRhinoceros/"
   twitterURL = "https://twitter.com/bobmcneel"
   linkedinURL = "https://www.linkedin.com/groups/75313/"
