--- a/themes/rhino3d.com-theme/data/authors.yml
+++ b/themes/rhino3d.com-theme/data/authors.yml
@@ -479,6 +479,11 @@ joingik:
   email: joingik@plusplastic.com
   discourse: ''
   github: ''
+jtr:
+  name: JTR Design
+  email: jack@jackrow.com
+  discourse: ''
+  github: ''
 ovidio:
   name: José Ovidio Cardona
   email: ovidio@mcneel.com
