Partial theme sync

--- a/themes/rhino3d.com-theme/data/authors.yml
+++ b/themes/rhino3d.com-theme/data/authors.yml
@@ -322,6 +322,11 @@ francesc:
   email: francesc@mcneel.com
   discourse: francescmcneel
   github: ''
+freyah:
+  name: Freya Holmér
+  email: https://www.youtube.com/@Acegikmo
+  discourse: ''
+  github: ''
 fsalla:
   name: Francesc Salla
   email: fsalla@mcneel.com
