--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -26,6 +26,7 @@
             },
             "args": [
                 "serve",
+                "--renderToDisk",
                 "browse=http://localhost:1313/",
                 "page=${file}",
                 "language=en"
