Updated documentation for running compute in debug mode

--- a/themes/rhino3d.com-theme/data/authors.yml
+++ b/themes/rhino3d.com-theme/data/authors.yml
@@ -755,6 +755,11 @@ paul.wintour:
   email: info@parametricmonkey.com
   discourse: 
   github: 
+pedro:
+  name: Pedro Cortes
+  email: pedro@mcneel.com
+  discourse: 'pedrocortes'
+  github: 'pedrocortesark'
 philc:
   name: Phil Cook
   email: phil@simplyrhino.co.uk
