Added myself as an author

--- a/themes/rhino3d.com-theme/data/authors.yml
+++ b/themes/rhino3d.com-theme/data/authors.yml
@@ -143,6 +143,12 @@ brianj:
   email: brianj@mcneel.com
   discourse: BrianJ
   github: BrianJames
+callum:
+  name: Callum Sykes
+  display_name: Callum@McNeel
+  email: Callum@mcneel.com
+  discourse: Callumsykes
+  github: clicketyclackety
 chaostv:
   name: ChaosTV
   email: ''
