Minor formatting tweaks.

--- a/themes/rhino3d.com-theme/data/authors.yml
+++ b/themes/rhino3d.com-theme/data/authors.yml
@@ -145,8 +145,8 @@ brianj:
   github: BrianJames
 callum:
   name: Callum Sykes
-  display_name: Callum@McNeel
-  email: Callum@mcneel.com
+  display_name: Callum @McNeel
+  email: callum@mcneel.com
   discourse: Callumsykes
   github: clicketyclackety
 chaostv:
