--- a/config/production/config.toml
+++ b/config/production/config.toml
@@ -1,5 +1,5 @@
 # production overrides
 # https://gohugo.io/getting-started/configuration/
-disableLanguages = ["cs", "cn", "de", "es", "fr", "it", "jp", "kr", "pl", "pt", "ru", "tw"]
+disableLanguages = ["cs", "cn", "de", "fr", "it", "jp", "kr", "pl", "pt", "ru", "tw"]
 
 baseURL = "https://developer.rhino3d.com/"
