--- a/config/development/config.toml
+++ b/config/development/config.toml
@@ -1,6 +1,6 @@
 # development overrides
 # https://gohugo.io/getting-started/configuration/
-disableLanguages = ["cs", "cn", "de", "es", "fr", "it", "jp", "kr", "pl", "pt", "ru", "tw"]
+disableLanguages = ["cs", "cn", "de", "fr", "it", "jp", "kr", "pl", "pt", "ru", "tw"]
 
 [params]
     forestryBaseURL = "https://app.forestry.io/sites/9bs6ghwu05ji2w/#/pages/content-en" # deprecated; can be removed soon
