--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -354,7 +354,7 @@ googlefonts = [
         identifier = "guides"
         pre = ""
         post = ""
-        name = "Guides"
+        name = "Guías"
         url = "/guides"
         title = ""
         weight = 2
@@ -362,7 +362,7 @@ googlefonts = [
         identifier = "samples"
         pre = ""
         post = ""
-        name = "Samples"
+        name = "Muestras"
         url = "/samples"
         title = ""
         weight = 3
@@ -378,7 +378,7 @@ googlefonts = [
         identifier = "videos"
         pre = ""
         post = ""
-        name = "Videos"
+        name = "Vídeos"
         url = "/videos"
         title = ""
         weight = 5
@@ -386,7 +386,7 @@ googlefonts = [
         identifier = "community"
         pre = ""
         post = ""
-        name = "Community"
+        name = "Comunidad"
         url = "https://discourse.mcneel.com/c/rhino-developer"
         title = ""
         weight = 6
