translated menu items in  jp section

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -474,7 +474,7 @@ googlefonts = [
         identifier = "guides"
         pre = ""
         post = ""
-        name = "Guides"
+        name = "ガイド"
         url = "/guides"
         title = ""
         weight = 2
@@ -482,7 +482,7 @@ googlefonts = [
         identifier = "samples"
         pre = ""
         post = ""
-        name = "Samples"
+        name = "サンプル"
         url = "/samples"
         title = ""
         weight = 3
@@ -498,7 +498,7 @@ googlefonts = [
         identifier = "videos"
         pre = ""
         post = ""
-        name = "Videos"
+        name = "動画"
         url = "/videos"
         title = ""
         weight = 5
@@ -506,7 +506,7 @@ googlefonts = [
         identifier = "community"
         pre = ""
         post = ""
-        name = "Community"
+        name = "コミュニティ"
         url = "https://discourse.mcneel.com/c/rhino-developer"
         title = ""
         weight = 6
