--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -523,18 +523,18 @@ googlefonts = [
       imagesDir = "images"
       docLang = "ko-kr" # the language code used on docs.mcneel.com
     [languages.kr.taxonomies]
-      "tag" = "tags"
-      "category" = "categories"
-      "platform" = "platforms"
-      "task" = "tasks"
-      "level" = "levels"
-      "version" = "versions"
+      "태그" = "태그"
+      "카테고리" = "카테고리"
+      "플랫폼" = "플랫폼"
+      "작업" = "작업"
+      "레벨" = "레벨"
+      "버전" = "버전"
     [languages.kr.menu]
       [[languages.kr.menu.main]]
         identifier = "guides"
         pre = ""
         post = ""
-        name = "Guides"
+        name = "가이드"
         url = "/guides"
         title = ""
         weight = 2
@@ -542,7 +542,7 @@ googlefonts = [
         identifier = "samples"
         pre = ""
         post = ""
-        name = "Samples"
+        name = "샘플"
         url = "/samples"
         title = ""
         weight = 3
@@ -558,7 +558,7 @@ googlefonts = [
         identifier = "videos"
         pre = ""
         post = ""
-        name = "Videos"
+        name = "동영상"
         url = "/videos"
         title = ""
         weight = 5
@@ -566,7 +566,7 @@ googlefonts = [
         identifier = "community"
         pre = ""
         post = ""
-        name = "Community"
+        name = "커뮤니티"
         url = "https://discourse.mcneel.com/c/rhino-developer"
         title = ""
         weight = 6
