--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -26,7 +26,7 @@
             },
             "args": [
                 "serve",
-                "--renderToDisk",
+                "--renderStaticToDisk",
                 "browse=http://localhost:1313/",
                 "page=${file}",
                 "language=en"
@@ -88,7 +88,7 @@
             },
             "args": [
                 "serve",
-                "--renderToDisk",
+                "--renderStaticToDisk",
                 "-e",
                 "production"
             ]
